--- a/src/components/SlotsMachine4/SlotsMachine4.module.css
+++ b/src/components/SlotsMachine4/SlotsMachine4.module.css
@@ -54,7 +54,7 @@
   display: flex;
   text-align: center;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
   flex-direction: column;
 }
 .botDiv{
@@ -122,7 +122,7 @@
   );
   color: #fff;
   padding: 1rem 3rem 1rem 3rem;
-  border-radius: 1rem;
+  border-radius: 0.5rem;
   font-size: 1.3rem;
 }
 /*------------------------------------start Animation ----------------------*/
