--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -1,24 +1,26 @@
 .form {
-    background-color: rgba(255, 255, 255, 1);
-    width: 35%;
+  background-color: rgba(255, 255, 255, 1);
+  width: 37.5%;
 
-    border-radius: 12px;
+  border-radius: 12px;
 
-    padding: 4rem 3rem;
+  padding: 4.5rem 3.5rem;
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 1); /* Horizontal offset, vertical offset, blur radius, color */
 
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 2rem;
 
-    margin: 0 auto;
+  margin: 0 auto;
 }
 
 .form h4 {
-    font-size: 1rem;
-    text-align: center;
+  font-size: 1rem;
+  text-align: center;
 }
 
-.form label {
+  .form label {
     display: flex;
     flex-direction: column;
     color: #686868;
@@ -26,16 +28,35 @@
     font-size: 0.75rem;
     border-radius: 12px;
 
-    padding: 0.5rem 0.75rem;
+    padding: 0.5rem 1rem;
+  }
 
-}
+  .form label,
+  .form input {
+    background-color: #eaeaec;
+  }
 
-.form label, .form input {
-    background-color: #EAEAEC;
-}
-
-.form input {
+  .form input {
     outline: none;
     color: black;
     font-size: 1rem;
+  }
+
+@media only screen and (max-width: 1200px) {
+  .form {
+    width: 90%;
+  }
+}
+
+@media only screen and (max-width: 750px) {
+  .form {
+    width: 80%;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .form {
+    padding: 3rem 2.5rem;
+    width: 70%;
+  }
 }
