--- a/src/components/QuizGame3/QuizGame3.module.css
+++ b/src/components/QuizGame3/QuizGame3.module.css
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: radial-gradient(circle, #B566B1 0%, #C42525 100%);
+  background: #272052;
 
 }
 .VisibleQuizzGame {
@@ -126,9 +126,10 @@
 }
 .QuestionBtnDiv {
   width: 15rem;
+  height: 15rem;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content:flex-start;
   flex-direction: column;
   gap: 1rem;
 }
