--- a/src/components/Game/Main.css
+++ b/src/components/Game/Main.css
@@ -67,3 +67,11 @@
   animation: anvil 0.25s cubic-bezier(0.38, 0.1, 0.36, 0.9) forwards;
   -webkit-animation: anvil 0.25s cubic-bezier(0.38, 0.1, 0.36, 0.9) forwards;
 }
+
+/* TITLE IMAGES */
+.title-texts img:nth-child(1) {
+  width: 22rem !important;
+}
+.title-texts img:nth-child(2) {
+  width: 15rem !important;
+}
