--- a/src/components/SlotsMachine4/SlotsMachine4.module.css
+++ b/src/components/SlotsMachine4/SlotsMachine4.module.css
@@ -69,7 +69,7 @@
   flex-direction: column;
 }
 
-@media only screen and (max-width: 1200px) {
+@media only screen and (max-width: 800px) {
   .resultDiv {
     width: 100%;
     height: 100%;
@@ -77,7 +77,7 @@
   }
   .topDiv {
     width: 100%;
-    height: 57.5%;
+    min-height: 57.5%;
   }
   .botDiv {
     width: 100%;
