refactor - remove pointer events on wheel related imgs

--- a/src/components/Game/Wheel.css
+++ b/src/components/Game/Wheel.css
@@ -110,6 +110,10 @@
   transform-origin: center;
 }
 
+.wheel-container {
+  pointer-events: none;
+}
+
 @keyframes spinAnimation {
   from {
     transform: rotate(0deg);
