--- a/src/components/SlotsMachine4/SlotsMachine4.module.css
+++ b/src/components/SlotsMachine4/SlotsMachine4.module.css
@@ -49,7 +49,8 @@
 }
 .topDiv {
   width: 30rem;
-  height: 30rem;
+  min-height: 30rem;
+  gap: 1rem;
   background-color: #fff;
   display: flex;
   text-align: center;
@@ -77,7 +78,6 @@
   }
   .topDiv {
     width: 100%;
-    min-height: 57.5%;
   }
   .botDiv {
     width: 100%;
