--- a/src/components/QuizGame3/QuizGame3.module.css
+++ b/src/components/QuizGame3/QuizGame3.module.css
@@ -5,8 +5,9 @@
   align-items: center;
   justify-content: center;
   background: #272052;
-
+  overflow-y: auto;
 }
+
 .VisibleQuizzGame {
   width: 100%;
   height: 100%;
@@ -70,13 +71,13 @@
 .qInput:focus {
   border-bottom: 3px solid #181818;
 }
-.resultDiv{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    width: 20rem;
-    color: #fff;
+.resultDiv {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 20rem;
+  color: #fff;
 }
 .CompanyNameDiv {
   display: flex;
@@ -129,7 +130,7 @@
   height: 15rem;
   display: flex;
   align-items: center;
-  justify-content:flex-start;
+  justify-content: flex-start;
   flex-direction: column;
   gap: 1rem;
 }
@@ -335,7 +336,7 @@
   border-radius: 50%;
   margin-right: 0.5rem;
 }
-.btnDiv{
+.btnDiv {
   width: 15rem;
 }
 .coinCounter {
@@ -349,15 +350,13 @@
     height: 100%;
     gap: 1rem;
   }
-  .btnDiv{
+  .btnDiv {
     width: 100%;
   }
-  .coinCounter{
+  .coinCounter {
     font-size: 1rem;
     position: absolute;
     right: 3rem;
-  }
-  .QuizCanvas {
   }
   .main {
     background-image: none;
@@ -372,7 +371,7 @@
     right: -0.3rem;
   }
   .coinDiv {
-position: relative;
+    position: relative;
     display: flex;
     gap: 1rem;
     flex-direction: row;
@@ -408,8 +407,8 @@ position: relative;
   }
   .QuestionHeaderDiv {
     width: 100%;
-    height: 60%;
-    gap: 2rem;
+    height: 50%;
+    gap: 1rem;
     justify-content: center;
   }
   .QuestionBtnDiv {
@@ -439,7 +438,7 @@ position: relative;
     font-size: 1.6rem;
   }
   .PageCounter {
-    font-size: 1.5rem;
+    font-size: 0.9rem;
     width: 90%;
     text-align: left;
   }
@@ -464,4 +463,3 @@ position: relative;
     width: 90%;
   }
 }
-
