--- a/src/components/QuizGame3/QuizGame3.module.css
+++ b/src/components/QuizGame3/QuizGame3.module.css
@@ -391,6 +391,7 @@
     height: 45% !important;
     border-radius: 3rem;
     padding: 0;
+    justify-content: flex-start;
   }
   .StartBtn {
     width: 80%;
