--- a/src/components/QuizGame3/QuizGame3.module.css
+++ b/src/components/QuizGame3/QuizGame3.module.css
@@ -345,7 +345,7 @@
 }
 @media screen and (max-width: 748px) {
   .enterDiv {
-    justify-content: flex-end;
+    justify-content: flex-start;
     width: 100%;
     height: 100%;
     gap: 1rem;
@@ -383,7 +383,7 @@
     height: 2.2rem;
   }
   .ilusImg {
-    width: 100% !important;
+    width: 88% !important;
     padding-right: 1rem;
   }
   .infoDiv5 {
@@ -408,7 +408,7 @@
   }
   .QuestionHeaderDiv {
     width: 100%;
-    height: 50%;
+    height: 48%;
     gap: 1rem;
     justify-content: center;
   }
