--- a/src/components/SlotsMachine4/SlotsMachine4.module.css
+++ b/src/components/SlotsMachine4/SlotsMachine4.module.css
@@ -1,8 +1,9 @@
 .main {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
-  gap: 1rem;
+  gap: 2rem;
+  padding: 4rem 0;
   align-items: center;
   justify-content: center;
   flex-direction: column;
@@ -187,9 +188,22 @@
   animation-delay: 0.3s;
   filter: blur(5px);
 }
-
 .animate5 {
   animation: moveDown 0.5s forwards infinite;
+  animation-delay: 0.6s;
+  filter: blur(5px);
+}
+.animate33 {
+  animation: moveDown 1s forwards infinite;
+  filter: blur(5px);
+}
+.animate44 {
+  animation: moveDown 1s forwards infinite;
+  animation-delay: 0.3s;
+  filter: blur(5px);
+}
+.animate55 {
+  animation: moveDown 1s forwards infinite;
   animation-delay: 0.6s;
   filter: blur(5px);
 }
