feat - scratch and win

--- a/src/fonts.css
+++ b/src/fonts.css
@@ -1,7 +1,22 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
+
 * {
-    font-family: "Inter", sans-serif;
-    font-weight: 400;
-    font-style: normal;;
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Cooper Black Regular";
+  font-style: normal;
+  font-weight: normal;
+  src: local("Cooper Black Regular"), url("./assets/fonts/COOPBL.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Petrov Sans";
+  font-style: normal;
+  font-weight: normal;
+  src: local("Petrov Sans"), url("./assets/fonts/PetrovSans-Regular.ttf") format("truetype");
 }
