--- a/src/components/BallGame/BallGame.module.css
+++ b/src/components/BallGame/BallGame.module.css
@@ -2,7 +2,7 @@
   width: 100%;
   min-height: 100vh;
   display: flex;
-  padding: 4rem 0;
+  padding: 2rem 0;
   justify-content: center;
   align-items: center;
   background-color: #403baa;
@@ -18,7 +18,8 @@
 .page0 {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
+  gap: 3rem;
   flex-direction: column;
 }
 .enterBtn {
