--- a/src/components/BallGame/BallGame.module.css
+++ b/src/components/BallGame/BallGame.module.css
@@ -15,6 +15,39 @@
   justify-content: center;
   cursor: url("../../assets/ballgame/cursor1.png"), auto;
 }
+.popDiv {
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  background-position: center;
+  background-size: cover;
+  z-index: 9;
+  background-repeat: no-repeat;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.popCont {
+  width: 20rem;
+  height: 12rem;
+  background-color: #403baa;
+  border: 8px solid #fff;
+  border-radius: 1rem;
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  color: #fff;
+  position: relative;
+}
+.starDiv {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
 .page0 {
   display: flex;
   align-items: center;
@@ -189,7 +222,7 @@
 }
 .popCont {
   width: 20rem;
-  height: 8rem;
+  height: 12rem;
   background-color: #403baa;
   border: 8px solid #fff;
   border-radius: 1rem;
