--- a/src/components/BallGame/BallGame.module.css
+++ b/src/components/BallGame/BallGame.module.css
@@ -7,6 +7,7 @@
   align-items: center;
   background-color: #403baa;
   overflow: hidden;
+  position: relative;
 }
 
 .gameDiv {
@@ -17,6 +18,7 @@
   justify-content: center;
   cursor: url("../../assets/ballgame/cursor1.png"), auto;
 }
+
 .popDiv {
   position: absolute;
   width: 100%;
