--- a/src/components/SlotsMachine4/SlotsMachine4.module.css
+++ b/src/components/SlotsMachine4/SlotsMachine4.module.css
@@ -5,6 +5,7 @@
   gap: 2rem;
   padding: 2rem 0;
   align-items: center;
+  position: relative;
   justify-content: center;
   flex-direction: column;
   background: linear-gradient(
