--- a/src/components/QuizGame3/QuizGame3.module.css
+++ b/src/components/QuizGame3/QuizGame3.module.css
@@ -71,14 +71,7 @@
 .qInput:focus {
   border-bottom: 3px solid #181818;
 }
-.resultDiv {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  width: 20rem;
-  color: #fff;
-}
+
 .CompanyNameDiv {
   display: flex;
   align-items: center;
@@ -221,7 +214,7 @@
 }
 .ResultDiv {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: flex;
   gap: 4rem;
   align-items: center;
