--- a/src/components/WheelOfFortune/Main.css
+++ b/src/components/WheelOfFortune/Main.css
@@ -16,6 +16,12 @@
   /* animation: backgroundAppear 1.5s ease-out forwards; */
 }
 
+@media only screen and (max-width: 768px) {
+  .main {
+    padding-top: 4rem;
+  }
+}
+
 @keyframes backgroundAppear {
   from {
     background-size: 200%;
