--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -1,17 +1,15 @@
 .form {
   background-color: rgba(255, 255, 255, 1);
-  width: 37.5%;
-
+  min-width: 30rem;
+  width: 30rem;
   border-radius: 12px;
-
+  height: 45rem;
   padding: 4.5rem 3.5rem;
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 1); /* Horizontal offset, vertical offset, blur radius, color */
-
   display: flex;
   flex-direction: column;
   justify-content: center;
   gap: 2rem;
-
   margin: 0 auto;
 }
 
@@ -42,12 +40,6 @@
   font-size: 1rem;
 }
 
-@media only screen and (max-width: 1200px) {
-  .form {
-    width: 90%;
-  }
-}
-
 @media only screen and (max-width: 750px) {
   .tick-text {
     font-size: 0.65rem !important;
@@ -59,10 +51,6 @@
     background: url(../Game/assets/mockup.png);
     gap: 0 !important;
     height: 7rem !important;
-  }
-
-  .form {
-    width: 80%;
   }
 
   .form-checkbox-preview {
